--- a/src/components/UserDash/DashHeader.css
+++ b/src/components/UserDash/DashHeader.css
@@ -78,3 +78,9 @@
 #logout-btn {
   width: 100%;
 }
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .dash-header {
+    display: none;
+  }
+}
