--- a/src/components/UserDash/MyCampaignEvents/Calendar.css
+++ b/src/components/UserDash/MyCampaignEvents/Calendar.css
@@ -1,5 +1,14 @@
 .event-calendar-view {
-  height: 20vh;
-  width: 60vw;
+  /* width: 80vw; */
   border: 1px solid black;
+  border-radius: 7px;
+  height: 400px;
+}
+.rbc-time-slot {
+  width: 5vw;
+  font-size: 10px;
+}
+.rbc-toolbar {
+  display: flex;
+  flex-direction: column;
 }
