--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@
   text-align: center;
   display: flex;
   justify-content: flex-start;
-  /* flex-direction: column; */
   height: 100vh;
   overflow-y: hidden;
   /* height: 99vh; */
@@ -30,4 +29,23 @@
   width: 100%;
 
   /* display: flex; */
+}
+
+@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
+  .App {
+    width: 100vw;
+    justify-content: center;
+    align-items: center;
+    /* height: 100vh; */
+  }
+  .app-container {
+    width: 100vw;
+    margin-left: 0;
+  }
+  .app-content {
+    /* height: 100vh; */
+    width: 100%;
+
+    /* display: flex; */
+  }
 }
