--- a/src/components/UserDash/ProfilePage/ProfilePage.css
+++ b/src/components/UserDash/ProfilePage/ProfilePage.css
@@ -1,23 +1,72 @@
-.info-field {
+.profile {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 60vw;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: stretch;
+  width: 80vw;
 }
-.info {
-  margin: 20px;
+
+.profile-user-title {
+  margin: 2vh 0;
+  display: flex;
+  justify-content: space-around;
+}
+
+.profile-edit-btn {
+  width: 150px;
+  border-radius: 4px;
+  background-color: #2c3754;
+  color: white;
+  font-size: 16px;
+  border: black;
+}
+
+.profile-body {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  /* flex-direction: column; */
+}
+
+.img-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 1vh 0;
+  width: 30%;
 }
 .profile-img {
   height: 200px;
   width: 200px;
-  align-self: flex-start;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: center;
+  line-height: 20px;
 }
 
-.profile {
-  width: 80vw;
-  display: flex;
+.info-field {
+  text-align: end;
+  padding-left: 2vw;
+  width: 20vw;
+}
+.form-labels {
+  text-align: start;
+  width: 10vw;
 }
 
 .info {
-  line-height: 20px;
+  text-align-last: justify;
+}
+.form-body {
+  display: flex;
+}
+.profile-submit-btn {
+  width: 150px;
+  border-radius: 4px;
 }
